--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -192,7 +192,7 @@
     text-align: center;
 
     opacity: .25;
-    color: #000000d1;
+    color: #ff851bb0;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -200,5 +200,5 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+    color: #ff851b;
 }
