--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,7 @@ ul {
     }
     .navbar.navbar-dark .navbar-toggler {
         border: 0;
-        background: #431200;
+        background: #ff851b;
     }
     .navbar.navbar-dark .navbar-toggler:focus {
         outline: 0;
